[tool.poetry]
name = "acni"
version = "0.1.0"
description = "A PyTorch implementation of Anticorrelated Noise Injection for Improved Generalization"
authors = ["Miller Wilt <miller@pyriteai.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
ipython = "^8.4.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytorch-lightning = "^1.6.4"
torchmetrics = "^0.9.2"
torchvision = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
